CU-2mczcj1 - Fix paragraph spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -75,6 +75,9 @@ p,ul{
     font-size:18px;
     margin-bottom:40px
 }
+.panel-row p, .panel-row h1 {
+    margin-bottom: 22px;
+}
 
 #message-alert{
     display:none
